# target-aid

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
cpp/: Bullet.cpp  CircleDetector.cpp  Gun.cpp  ProcessMedia.cpp  ShootingRange.cpp  TargetDetector.cpp  TargetTracker.cpp  main.cpp
headers/: Bullet.h  CircleDetector.h  Gun.h  ProcessMedia.h  ShootingRange.h  TargetDetector.h  TargetTracker.h
resources/: guns.json
scripts/: autobuild.sh  watch.sh
